Tối ưu báo lỗi và cập nhật dữ liệu mẫu

--- a/THDA_Group1_D13HT01/THDA_Group1_D13HT01.csproj
+++ b/THDA_Group1_D13HT01/THDA_Group1_D13HT01.csproj
@@ -37,7 +37,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -99,6 +99,7 @@
     <Compile Include="DSChuyenDi.cs" />
     <Compile Include="DSLoaiXe.cs" />
     <Compile Include="DSXe.cs" />
+    <Compile Include="ErrorLogs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -115,6 +116,15 @@
     <Compile Include="Xe.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="DanhSachChuyenDi.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DanhSachLoaiXe.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DanhSachXe.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Ubuntu.ico" />
   </ItemGroup>
   <ItemGroup>
