--- a/THDA_Group1_D13HT01/app.config
+++ b/THDA_Group1_D13HT01/app.config
@@ -28,6 +28,9 @@
             <setting name="MAX_SL_XE" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="FILE_LOGS" serializeAs="String">
+                <value>logs.txt</value>
+            </setting>
         </THDA_Group1_D13HT01.Properties.Settings>
     </applicationSettings>
 </configuration>
