--- a/THDA_Group1_D13HT01/Properties/Settings.settings
+++ b/THDA_Group1_D13HT01/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="MAX_SL_XE" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="FILE_LOGS" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">logs.txt</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
