--- a/THDA_Group1_D13HT01/app.config
+++ b/THDA_Group1_D13HT01/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="THDA_Group1_D13HT01.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="THDA_Group1_D13HT01.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <THDA_Group1_D13HT01.Properties.Settings>
@@ -33,4 +36,11 @@
             </setting>
         </THDA_Group1_D13HT01.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <THDA_Group1_D13HT01.Properties.Settings>
+            <setting name="AUTO_LOAD_DATA" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </THDA_Group1_D13HT01.Properties.Settings>
+    </userSettings>
 </configuration>
