--- a/THDA_Group1_D13HT01/Properties/Settings.settings
+++ b/THDA_Group1_D13HT01/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="AUTO_LOAD_DATA" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="PAGINATION_PER_PAGE" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">25</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
