--- a/THDA_Group1_D13HT01/app.config
+++ b/THDA_Group1_D13HT01/app.config
@@ -41,6 +41,9 @@
             <setting name="AUTO_LOAD_DATA" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="PAGINATION_PER_PAGE" serializeAs="String">
+                <value>25</value>
+            </setting>
         </THDA_Group1_D13HT01.Properties.Settings>
     </userSettings>
 </configuration>
